// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components Features Filters should have current vote average set to 4 1`] = `
<body>
  <div>
    <div
      class="sc-gsTCUz rwXcF"
    >
      <div
        class="sc-dlfnbm ibhunx"
      >
        <button
          class="sc-bdfBwQ geIehQ"
        >
          Action
        </button>
        <button
          class="sc-bdfBwQ geIehQ"
        >
          Adventure
        </button>
        <button
          class="sc-bdfBwQ geIehQ"
        >
          Animation
        </button>
        <button
          class="sc-bdfBwQ geIehQ"
        >
          Comedy
        </button>
        <button
          class="sc-bdfBwQ geIehQ"
        >
          Crime
        </button>
        <button
          class="sc-bdfBwQ geIehQ"
        >
          Documentary
        </button>
        <button
          class="sc-bdfBwQ geIehQ"
        >
          Drama
        </button>
        <button
          class="sc-bdfBwQ geIehQ"
        >
          Family
        </button>
        <button
          class="sc-bdfBwQ geIehQ"
        >
          Fantasy
        </button>
        <button
          class="sc-bdfBwQ geIehQ"
        >
          History
        </button>
        <button
          class="sc-bdfBwQ geIehQ"
        >
          Horror
        </button>
        <button
          class="sc-bdfBwQ geIehQ"
        >
          Music
        </button>
        <button
          class="sc-bdfBwQ geIehQ"
        >
          Mystery
        </button>
        <button
          class="sc-bdfBwQ geIehQ"
        >
          Romance
        </button>
        <button
          class="sc-bdfBwQ geIehQ"
        >
          Science Fiction
        </button>
        <button
          class="sc-bdfBwQ geIehQ"
        >
          TV Movie
        </button>
        <button
          class="sc-bdfBwQ geIehQ"
        >
          Thriller
        </button>
        <button
          class="sc-bdfBwQ geIehQ"
        >
          War
        </button>
        <button
          class="sc-bdfBwQ geIehQ"
        >
          Western
        </button>
      </div>
      <div
        class="sc-hKgILt cqkDVS"
      >
        <h3>
          Vote average: 
        </h3>
        <input
          aria-label="number"
          type="number"
          value="4"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`Components Features Filters should render, without crashing 1`] = `
<body>
  <div>
    <div
      class="sc-gsTCUz rwXcF"
    >
      <div
        class="sc-dlfnbm ibhunx"
      >
        <button
          class="sc-bdfBwQ geIehQ"
        >
          Action
        </button>
        <button
          class="sc-bdfBwQ geIehQ"
        >
          Adventure
        </button>
        <button
          class="sc-bdfBwQ geIehQ"
        >
          Animation
        </button>
        <button
          class="sc-bdfBwQ geIehQ"
        >
          Comedy
        </button>
        <button
          class="sc-bdfBwQ geIehQ"
        >
          Crime
        </button>
        <button
          class="sc-bdfBwQ geIehQ"
        >
          Documentary
        </button>
        <button
          class="sc-bdfBwQ geIehQ"
        >
          Drama
        </button>
        <button
          class="sc-bdfBwQ geIehQ"
        >
          Family
        </button>
        <button
          class="sc-bdfBwQ geIehQ"
        >
          Fantasy
        </button>
        <button
          class="sc-bdfBwQ geIehQ"
        >
          History
        </button>
        <button
          class="sc-bdfBwQ geIehQ"
        >
          Horror
        </button>
        <button
          class="sc-bdfBwQ geIehQ"
        >
          Music
        </button>
        <button
          class="sc-bdfBwQ geIehQ"
        >
          Mystery
        </button>
        <button
          class="sc-bdfBwQ geIehQ"
        >
          Romance
        </button>
        <button
          class="sc-bdfBwQ geIehQ"
        >
          Science Fiction
        </button>
        <button
          class="sc-bdfBwQ geIehQ"
        >
          TV Movie
        </button>
        <button
          class="sc-bdfBwQ geIehQ"
        >
          Thriller
        </button>
        <button
          class="sc-bdfBwQ geIehQ"
        >
          War
        </button>
        <button
          class="sc-bdfBwQ geIehQ"
        >
          Western
        </button>
      </div>
      <div
        class="sc-hKgILt cqkDVS"
      >
        <h3>
          Vote average: 
        </h3>
        <input
          aria-label="number"
          type="number"
          value="0"
        />
      </div>
    </div>
  </div>
</body>
`;
